--- a/Minion Says/Base.lproj/Main.storyboard
+++ b/Minion Says/Base.lproj/Main.storyboard
@@ -8,7 +8,7 @@
         <!--Minion Says-->
         <scene sceneID="Tuk-8n-4yL">
             <objects>
-                <tableViewController id="MLy-BI-l6K" customClass="MSViewController" sceneMemberID="viewController">
+                <tableViewController id="MLy-BI-l6K" customClass="MSTableViewController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="80" sectionHeaderHeight="22" sectionFooterHeight="22" id="MHa-jG-iuS">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -62,7 +62,50 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NbS-W7-EDJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="368" y="316.99999999999994"/>
+            <point key="canvasLocation" x="-70" y="1036"/>
+        </scene>
+        <!--Collection View Controller-->
+        <scene sceneID="cNH-HP-p8s">
+            <objects>
+                <collectionViewController id="PNQ-sD-oTX" customClass="MSCollectionViewController" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="tZc-nD-kGz">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="byB-mT-Oy6">
+                            <size key="itemSize" width="50" height="50"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="e25-4p-td5" customClass="MSCollectionViewCell">
+                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="80" height="80"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="GKg-Ps-tUP">
+                                            <rect key="frame" x="0.0" y="0.0" width="80" height="80"/>
+                                        </imageView>
+                                    </subviews>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
+                                <size key="customSize" width="80" height="80"/>
+                                <connections>
+                                    <outlet property="contentImage" destination="GKg-Ps-tUP" id="YVo-pQ-SPe"/>
+                                </connections>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="PNQ-sD-oTX" id="eOx-Zt-PIX"/>
+                            <outlet property="delegate" destination="PNQ-sD-oTX" id="6Xv-ec-JqT"/>
+                        </connections>
+                    </collectionView>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="UCo-EC-gwU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="478" y="1036"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="nqt-If-m2N">
@@ -73,12 +116,31 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="MLy-BI-l6K" kind="relationship" relationship="rootViewController" id="eX7-6M-8oN"/>
+                        <segue destination="P2Q-SD-Bn6" kind="relationship" relationship="rootViewController" id="Tfk-fM-L7P"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="AG4-s4-7q2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-69.333333333333329" y="317.13333333333327"/>
+        </scene>
+        <!--Container View Controller-->
+        <scene sceneID="TWk-3X-l5A">
+            <objects>
+                <viewController id="P2Q-SD-Bn6" customClass="MSContainerViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="rG3-5p-kPF"/>
+                        <viewControllerLayoutGuide type="bottom" id="iPK-LT-XCf"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="rRA-OI-3aR">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="G7h-xd-9sS"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VJW-ba-61o" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="478" y="317"/>
         </scene>
     </scenes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
